--- a/Themes/forum.css
+++ b/Themes/forum.css
@@ -1,4 +1,6 @@
-/* Forum */
+/* ------------------- FORUM ------------------- */
+
+/* Forum container */
 .visual-refresh .container_f369db {
     border-radius: 10px;
     border: var(--border);
