--- a/Themes/global.css
+++ b/Themes/global.css
@@ -1,3 +1,17 @@
+/* ------------------- IMPORT ------------------- */
+/* Chat */
+@import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/Themes/chat.css);
+
+/* Embed + Media related */
+@import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/Themes/embed.css);
+
+/* Home (Settings + Store etc) */
+@import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/Themes/home.css);
+
+/* Voice chat */
+@import url(https://raw.githubusercontent.com/Getbricked/ClearVision-Aki/refs/heads/Hyprcord/Themes/voicecall.css);
+
+
 /* ------------------- GLOBAL ------------------- */
 /* Define border var */
 #app-mount {
@@ -35,291 +49,4 @@
 /* Border user profile */
 .outer_c0bea0 {
     border: var(--border);
-}
-
-/* ------------------- CHAT ------------------- */
-/* Chat input */
-.visual-refresh .form_f75fb0 {
-    padding-left: var(--global-margin);
-    padding-right: var(--global-margin);
-}
-
-/* Right click on msg */
-.menu_c1e9c4 {
-    border-radius: 10px;
-    border: var(--border) !important;
-}
-
-/* On hover msg */
-.message__5126c.selected__5126c .buttonsInner__5126c,
-.mouse-mode .message__5126c:hover .buttonsInner__5126c {
-    border: var(--border);
-    border-radius: 10px;
-}
-
-/* Emoji + GIF + Stickers Box */
-.visual-refresh .contentWrapper__08434 {
-    border: var(--border);
-    border-radius: 10px;
-}
-
-/* Chat contents */
-.scrollerInner__36d07 {
-    padding-left: calc(var(--global-margin) - var(--space-xs));
-}
-
-/* Search result panel */
-.visual-refresh .searchResultsWrap_a9e706 {
-    margin-top: var(--global-margin);
-    margin-left: var(--global-margin);
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* Thread full screen */
-.visual-refresh .modal__9a792 {
-    border: var(--border);
-}
-
-/* Notice */
-.visual-refresh .notice__6e2b9 {
-    border-radius: 10px;
-    margin-top: var(--global-margin);
-    border: var(--bordersize, 1px) solid;
-    margin-left: var(--global-margin);
-}
-
-/* Upload attachment in chat input */
-.upload_aa605f {
-    border-radius: 10px;
-    border: var(--border) !important;
-}
-
-/* ------------------- DIRRECT MESSAGE ------------------- */
-/* Show User Profile */
-.content_f75fb0 .inner_c0bea0 {
-    border-radius: 10px;
-}
-
-.content_f75fb0 .outer_c0bea0 {
-    border-radius: 10px;
-    border: var(--border);
-    margin-top: var(--global-margin);
-    margin-left: var(--global-margin);
-    height: calc(100% - var(--global-margin) - var(--bordersize) * 2);
-}
-
-/* ------------------- FRIENDS ------------------- */
-/* Now playing + Friend list */
-.nowPlayingColumn__133bf,
-.visual-refresh .peopleColumn__133bf {
-    border-radius: 10px;
-    border: var(--border);
-    margin-top: var(--global-margin);
-}
-
-/* Friend list */
-.visual-refresh .peopleColumn__133bf {
-    margin-right: var(--global-margin);
-}
-
-/* ------------------- SHOP ------------------- */
-/* Shop header + Shop + Nitro */
-.mainPageScroller_ca1a02,
-.visual-refresh .shop__08415,
-.mainPageScroller_ca1a02 {
-    border-radius: 10px;
-    margin-top: var(--global-margin);
-    border: var(--border);
-}
-
-.visual-refresh .shop__6db1d {
-    background: transparent;
-}
-
-/* ------------------- SETTINGS ------------------- */
-/* Sidebar */
-.visual-refresh .sidebarRegion__23e6b {
-    margin-right: var(--global-margin);
-}
-
-/* Content + Sidebar */
-.contentRegion__23e6b,
-.visual-refresh .sidebarRegion__23e6b {
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* Global */
-.visual-refresh .standardSidebarView__23e6b {
-    margin-top: calc(var(--global-margin) + var(--custom-app-top-bar-height));
-}
-
-/* Top bar */
-#app-mount:has(.show_c38106) .bar_c38106 {
-    border: var(--border);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    margin: var(--global-margin);
-}
-
-/* ------------------- MEDIA PREVIEW ------------------- */
-/* Top bar (under windows bar) */
-.topBar__6088c {
-    position: relative;
-    top: calc(var(--global-margin) * 2);
-}
-
-/* Tool buttons */
-.actionButtons_cc1819,
-.closeButton__6088c {
-    border: var(--border);
-}
-
-/* The picture */
-.mediaArea_e03578 {
-    position: relative;
-    top: calc(var(--global-margin) * 3);
-    border: var(--border);
-    border-radius: 10px;
-}
-
-.media_a22bfd {
-    border-radius: 10px;
-}
-
-/* Image Preview */
-.mediaArea_e03578 img {
-    border-radius: 10px;
-}
-
-/* Tag server preview + Emoji server preview */
-.container__86bf6,
-.visual-refresh .popoutContainer__0f481 {
-    border: var(--border);
-}
-
-
-/* ------------------- VOICE CALL ------------------- */
-/* Title */
-.visual-refresh .wrapper_cb9592 .title_f75fb0 {
-    border: none;
-    margin: 0px;
-}
-
-/* Fullscreen mode */
-.callContainer_cb9592 {
-    border: var(--border) !important;
-    border-radius: 8px;
-    margin-top: var(--global-margin);
-}
-
-/* Header */
-.visual-refresh .wrapper_cb9592 .container__9293f {
-    border-radius: 10px;
-    border: none;
-    margin-top: var(--global-margin);
-}
-
-/* Hide user */
-.wrapper_cb9592:has(.noBorder__2f4f7) .videoWrapper__6981d {
-    border: none;
-}
-
-/* Picture in picture + Fullscreen mode */
-.borderRadius__6341f,
-.videoWrapper__6981d {
-    border-radius: 8px;
-    border: var(--border);
-}
-
-/* Stage */
-.chat_f75fb0:has(.container__9aed4) {
-    margin-top: var(--global-margin);
-    border-radius: 10px;
-    border: var(--border) !important;
-}
-
-.container__9aed4 {
-    margin-top: calc(2 * var(--global-margin));
-    border-radius: 10px;
-    border: var(--border);
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.tileContainer__71eb2 {
-    margin-top: calc(var(--global-margin) / 2);
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* Soundboard */
-.picker__09f65 {
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* Activities + Screen Share */
-.visual-refresh .root__49fc1 {
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* ------------------- EMBED ------------------- */
-/* VC Shiki Code */
-.visual-refresh .markup__75297 code {
-    border-radius: 10px;
-    border: var(--border);
-    background: color-mix(in srgb, var(--main-color), transparent 95%);
-}
-
-/* Media item */
-.nonVisualMediaItem_f4758a {
-    background: color-mix(in srgb, var(--main-color), transparent 80%);
-    border-radius: 10px;
-}
-
-/* Voice message */
-.rippleContainer_a8e786 {
-    border-radius: 10px;
-    border: none;
-}
-
-/* Link embed */
-.visual-refresh .embedFull__623de {
-    border: var(--border) !important;
-    border-radius: 10px;
-    background: var(--card-shading);
-}
-
-/* Discord embed */
-.visual-refresh .wrapper_d5f3cd {
-    border-radius: 10px;
-    border: var(--border);
-}
-
-/* Image in grid */
-.mosaicItem__6c706 {
-    border: var(--border) !important;
-    box-sizing: border-box !important;
-    border-radius: 10px;
-}
-
-/* Image global */
-.embedMedia__623de {
-    border-radius: 10px;
-}
-
-/* Imagine inline and in grid */
-.inlineMediaEmbed__623de .originalLink_af017a {
-    border: var(--border) !important;
-    box-sizing: border-box !important;
-    border-radius: 10px;
-}
-
-#message-accessories-1373888810101899285 .originalLink_af017a {
-    border: var(--border) !important;
-    box-sizing: border-box !important;
-    border-radius: 10px;
 }
