--- a/Themes/Settings.css
+++ b/Themes/Settings.css
@@ -13,3 +13,8 @@
 .visual-refresh .separator_b3f026 {
     display: none;
 }
+
+/* Online pill on server invitation display from web */
+.pillOnline__921c5 {
+    background: transparent;
+}
