--- a/Themes/Server.css
+++ b/Themes/Server.css
@@ -42,7 +42,7 @@
 .isExpanded__48112 .folderGroupBackground__48112 {
     opacity: 1;
     border: 2px solid;
-    border-color: var(--main-color);
+    border-color: var(--hsl-main-color);
 }
 
 
