--- a/Themes/Chat_Panel.css
+++ b/Themes/Chat_Panel.css
@@ -62,13 +62,13 @@
 
 /* Date Time divider in chat */
 .content__908e2 {
-    color: var(--main-color);
+    color: var(--hsl-main-color);
 }
 
 /* Divider for new chat */
 .unreadPill__908e2,
 .divider__908e2:has(.unreadPill__908e2) {
-    background-color: var(--main-color);
+    background-color: var(--hsl-main-color);
 }
 
 /* Server Invite link display */
