--- a/Themes/User_Pop.css
+++ b/Themes/User_Pop.css
@@ -1,7 +1,7 @@
 /* Remove Guild Tag Banner */
-.banner__86ab2 {
+/* .banner__86ab2 {
     background: transparent !important;
-}
+} */
 
 /* .container__86ab2 {
     background: var(--background-shading);
