--- a/Themes/User_Pop.css
+++ b/Themes/User_Pop.css
@@ -50,6 +50,6 @@
 } */
 
 /* Transparent user pop */
-.user-profile-popout:not(.custom-user-profile-theme)::before {
+/* .user-profile-popout:not(.custom-user-profile-theme)::before {
     background: transparent;
-}
+} */
