--- a/Themes/main.css
+++ b/Themes/main.css
@@ -33,7 +33,7 @@
 
   /* BACKGROUND IMAGES */
   --background-shading-percent: 100%;
-  --background-image: url(https://i.imgur.com/zU7YY60.jpeg);
+  --background-image: url(https://getbricked.github.io/ClearVision-Aki/Shu__Inori.jpg);
   --background-position: center;
   --background-size: cover;
   --background-attachment: fixed;
