--- a/Utils/HideMemberList.css
+++ b/Utils/HideMemberList.css
@@ -1,3 +1,4 @@
+/* Member list span on hover (thank you Leo and Leafy for helping 🙏) */
 .membersWrap_c8ffbb {
   position: relative;
   margin-left: calc(-190px * var(--is-enabled));
