--- a/Themes/Nameplate.css
+++ b/Themes/Nameplate.css
@@ -13,15 +13,15 @@
 }
 
 /* --------------------------- USER PANEL --------------------------- */
-.panels_c48ade:has(.activityPanel_c48ade) .container__4bbc6,
-.panels_c48ade:has(.container_e131a9) .container__4bbc6 {
+.panels__5e434:has(.activityPanel_c48ade) .container__4bbc6,
+.panels__5e434:has(.container_e131a9) .container__4bbc6 {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: inherit;
     border-bottom-left-radius: inherit;
 }
 
-.panels_c48ade .container__4bbc6 {
+.panels__5e434 .container__4bbc6 {
     border-radius: inherit;
     left: -4px;
     top: -2px;
@@ -30,13 +30,13 @@
 }
 
 /* Remove border for VC panel and activity panel */
-.visual-refresh .panels_c48ade:has(.container__4bbc6) .wrapper_e131a9,
-.visual-refresh .panels_c48ade:has(.container__4bbc6) .panel__5dec7 {
+.visual-refresh .panels__5e434:has(.container__4bbc6) .wrapper_e131a9,
+.visual-refresh .panels__5e434:has(.container__4bbc6) .panel__5dec7 {
     border-bottom: 0px solid rgba(225, 240, 253, 0.123);
 }
 
 /* Add border when VC panel and activity panel both appear */
-.visual-refresh .panels_c48ade:has(.container_e131a9) .panel__5dec7 {
+.visual-refresh .panels__5e434:has(.container_e131a9) .panel__5dec7 {
     border-bottom: 1px solid rgba(225, 240, 253, 0.123);
 }
 
@@ -176,10 +176,7 @@
     }
 
     .container__4bbc6:has(.videoContainer__4bbc6 video[src$="starfall_tides_rose/asset.webm"]),
-    .container__4bbc6:has(img[src$="starfall_tides_rose/static.png"]) {
-        background: linear-gradient(270deg, rgba(220, 62, 151, 0.1) 0%, rgba(220, 62, 151, 0.4) 100%) !important;
-    }
-
+    .container__4bbc6:has(img[src$="starfall_tides_rose/static.png"]),
     .container__4bbc6:has(.videoContainer__4bbc6 video[src$="im_watching_yooooou_treat/asset.webm"]),
     .container__4bbc6:has(img[src$="im_watching_yooooou_treat/static.png"]) {
         background: linear-gradient(270deg, rgba(220, 62, 151, 0.1) 0%, rgba(220, 62, 151, 0.4) 100%) !important;
