--- a/Themes/main.css
+++ b/Themes/main.css
@@ -62,8 +62,8 @@
   /* CHANNELS */
   --channel-normal: rgb(218, 218, 218);
   --channel-muted: var(--interactive-muted);
-  --channel-hover: var(--interactive-hover);
-  --channel-selected: var(--interactive-active);
+  --channel-hover: var(--interactive-text-hover);
+  --channel-selected: var(--interactive-text-active);
   --channel-selected-bg: var(--main-color);
   --channel-unread: var(--main-color);
   --channel-unread-hover: var(--hover-color);
